# fsoft2026_1DE_3

./: CMakeLists.txt  main.cpp
Sources/controllers/: controllers.cpp
Sources/exceptions/: ApplicationException.cpp  DataConsistencyException.cpp  DataConsistencyException.h.cpp  DuplicatedDataException.cpp  InvalidDataException.cpp  NoDataException.cpp  NotFoundException.cpp
Sources/mappers/: MatriculaMapper.cpp  StudentMapper.cpp  TrainingPlanMapper.cpp
Sources/model/: Matricula.cpp  MatriculaContainer.cpp  person.cpp  school.cpp  student.cpp  studentcontainer.cpp  trainingplan.cpp  trainingplancontainer.cpp
Sources/repo/: ISchoolRepository.cpp
Sources/service/: MatriculaService.cpp  StudentService.cpp  TrainingPlanService.cpp
Sources/view/: MatriculaView.cpp  StudentView.cpp  trainingPlanView.cpp  utils.cpp  view.cpp
headers/: pl5.h
headers/controller/: controller.h
headers/controllers/: controller.h
headers/dto/: DateDTO.h  MatriculaINDTO.h  MatriculaOUTDTO.h  MatriculaStudentPlansOUTDTO.h  MatriculaTrainingPlanStudentsOUTDTO.h  StudentINDTO.h  StudentOUTDTO.h  TrainingPlanINDTO.h  TrainingPlanOUTDTO.h
headers/exceptions/: ApplicationException.h  DataConsistencyException.h  DuplicatedDataException.h  InvalidDataException.h  NoDataException.h  NotFoundException.h
headers/mappers/: MatriculaMapper.h  StudentMapper.h  TrainingPlanMapper.h
headers/model/: Matricula.h  MatriculaContainer.h  person.h  school.h  student.h  studentcontainer.h  trainingplancontainer.h
headers/repo/: ISchoolRepository.h  SchoolMemoryRepository.h
headers/service/: MatriculaService.h  StudentService.h  TrainingPlanService.h
headers/view/: MatriculaView.h  StudentView.h  TrainingPlanView.h  utils.h  view.h
heathers/controllers/: controller.h
heathers/dto/: DateDTO.h
heathers/model/: student.h  trainingplan.h
mock/: MockData.cpp  MockData.h
sources/: FirstProject.cpp  pl5.cpp
